--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,15 @@ body {
 .container {
   @apply xxs:max-w-[474px] xs:max-w-[639px] sm:max-w-[768px] md:max-w-[1024px] lg:max-w-[1280px] xl:max-w-[1440px] 2xl:max-w-[1920px];
 }
-
+@layer utilities {
+  .scrollbar-hide {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;  /* Chrome, Safari and Opera */
+  }
+}
 @layer base {
   :root {
     --background: 0 0% 100%;
