--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,7 @@ body {
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
+    --mt-purple:"#A455ff"
   }
 
   .dark {
