updated hompage with animations and content

--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,9 @@ body {
   font-family: "Futura Std", sans-serif !important;
 }
 
-.container {
+/* .container {
   @apply xxs:max-w-[474px] xs:max-w-[639px] sm:max-w-[768px] md:max-w-[1024px] lg:max-w-[1280px] xl:max-w-[1440px] 2xl:max-w-[1920px];
-}
+} */
 @layer utilities {
   .scrollbar-hide {
     -ms-overflow-style: none;  /* IE and Edge */
