--- a/src/index.css
+++ b/src/index.css
@@ -412,3 +412,18 @@ body {
   left: 0;
   z-index: 0;
 }
+
+
+@media (max-width: 1025px) {
+  .mobile-menu {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: #f0ebe5;
+    z-index: 50;
+  }
+}
