--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,13 @@
 @import url("https://fonts.cdnfonts.com/css/futura-std-4");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Akshar:wght@300..700&family=Fredoka:wght@300..700&family=Inter:wght@100..900&family=Epilogue:wght@100..900&family=Figtree:wght@300..900&family=Poppins:wght@100..900&family=Roboto:wght@300;400;500;700&family=Mulish:wght@200..1000&family=Forum&family=Montserrat:wght@100..900&family=Outfit:wght@100..900&family=Cormorant:wght@300..700&family=DM+Sans:wght@100..1000&family=Fira+Sans:wght@100..900&family=Manrope:wght@200..800&family=Inconsolata:wght@200..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap");
+@font-face {
+  font-family: "Futura Std";
+  src: url("/font/FuturaStdBook.woff") format("woff");
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
