--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Akshar:wght@300..700&family=Fredoka:wght@300..700&family=Inter:wght@100..900&family=Epilogue:wght@100..900&family=Figtree:wght@300..900&family=Poppins:wght@100..900&family=Roboto:wght@300;400;500;700&family=Mulish:wght@200..1000&family=Forum&family=Montserrat:wght@100..900&family=Outfit:wght@100..900&family=Cormorant:wght@300..700&family=DM+Sans:wght@100..1000&family=Fira+Sans:wght@100..900&family=Manrope:wght@200..800&family=Inconsolata:wght@200..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Proza+Libre:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap");
+
 @font-face {
   font-family: "Futura Std";
   src: url("/assets/font/FuturaStdBook.woff") format("woff");
